<resources>
    <string name="app_name">Notepad</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="select_image">Select Image:</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_note">Enter Note:</string>
    <string name="enter_title">Enter Title</string>
    <string name="select_priority">Select Priority:</string>
    <string name="record_audio">Record Audio</string>
    <string name="creation_date">Creation Date:</string>
    <string name="update_date">Update Date:</string>
    <string name="delete">Delete</string>
    <string name="delete_big">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="record_and_listen">RECORD AND LISTEN</string>
</resources>