<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview_dialog_item_details_cancel"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_gravity="end"
        android:src="@drawable/ic_baseline_cancel_24"/>


    <TextView
        android:id="@+id/textview_dialog_item_details_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:textColor="@color/black"
        android:text="@string/delete"
        android:textSize="@dimen/_10sdp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textview_dialog_item_details_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_margin="@dimen/_5sdp"
        android:textColor="@color/black"
        android:text="@string/delete"
        android:textSize="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/imageview_dialog_item_details"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight=".5"
            android:textColor="@color/black"
            android:text="@string/creation_date"
            android:textSize="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:textColor="@color/black"
            android:text="@string/update_date"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/textview_dialog_item_details_creation_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight=".5"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"/>


        <TextView
            android:id="@+id/textview_dialog_item_details_update_date"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_dialog_item_details_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight=".5"
            app:cardBackgroundColor="@color/blue_500"
            app:cardCornerRadius="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delete_big"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_dialog_item_details_edit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/_5sdp"
            app:cardBackgroundColor="@color/blue_500"
            app:cardCornerRadius="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_dialog_item_details_record_audio"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight=".5"
            app:cardBackgroundColor="@color/blue_500"
            android:layout_marginStart="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/record_and_listen"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>


        </androidx.cardview.widget.CardView>


    </LinearLayout>




</LinearLayout>