<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_enter_tltle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/white"
            android:hint="Enter Title Here" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_enter_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/white"
            android:hint="Enter Note Here" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/select_image" />


        <ImageView
            android:id="@+id/imageview_select_image"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_default_image"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/select_priority" />


        <Spinner
            android:id="@+id/spinner_select_priority"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="match_parent" />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="end">
        <TextView
            android:id="@+id/textView_add_item_cancel"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:textSize="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textView_add_item_ok"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:textSize="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>





</LinearLayout>